2013-12-28  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/ZigguratR.h (Ziggurat): Added a generator which uses
	R's unif_rand() as a source of uniform RNG -- so that we can seed it
	from R when Ziggurat is used as the user-supplied generator

2013-12-22  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.1.1
	* DESCRIPTION: Added 'Depends: R (>= 3.0.0)' as we use the vignette
	builder facility

	* cleanup: Remove all pdf files in vignettes/ to force rebuilds

2013-12-21  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.1.0

	* Numerous changes made since the previous version:
	  - cleaner implementation using virtual base class and namespaces
	  - better split between header files in inst/include and src
	  - new open source implementations from Gretl and QuantLib
	  - added three tests: chi^2 as in Leong et al, standard test common
	    for uniform generators, new adapted standard test
	  - added three tests also as user-accessible functions, and as demos
	  - added vignette describing method, implementation, statistical
  	    tests and properties, as well as generator speed comparison

2013-10-06  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Initial 0.0.1 packaging, github push and CRAN upload
