@@ -53,12 +53,7 @@ void zsetseedMT(int s) {
     ziggmt.setSeed(s);
 }
 
-// see help(RNGind) and help(Random.user) in R
-static double x;
-extern "C" double *user_norm_rand() {
-    x = ziggmt.norm();
-    return &x;
-}
+
 
 // Version 2 -- Derived from Leong et al, JSS, 2005
 static Ziggurat::LZLLV::ZigguratLZLLV zigglzllv;
@@ -239,6 +234,14 @@ Rcpp::NumericVector zrnormR(int n) {
     }
     return x;
 }
+
+// see help(RNGind) and help(Random.user) in R
+static double x_;
+extern "C" double *user_norm_rand() {
+    x_ = ziggr.norm();
+    return &x_;
+}
+
 
 
 
